# BeanBot

./: .gitignore  106078943359335895487-6531f14f31eb.json  CHANGELOG.md  Cargo.toml
beanscape/backend/: .gitignore  package-lock.json  package.json  tsconfig.json
beanscape/backend/src/: app.ts
beanscape/backend/src/handlers/: beanHandler.ts
beanscape/backend/src/routes/: beans.ts
beanscape/frontend/: package-lock.json  package.json
beanscape/frontend/public/: env.js  index.html  manifest.json
beanscape/frontend/src/: App.css  App.tsx  index.tsx  store.tsx
beanscape/frontend/src/components/: AddBeanModal.tsx  LoginButton.tsx  MessageCard.tsx
beanscape/frontend/src/containers/: MessageLog.tsx  PageHeader.tsx
beanscape/frontend/src/screens/: BeanScreen.tsx  HomeScreen.tsx  NotFound.tsx
beanscape/frontend/src/slices/: MessageLogSlice.tsx
beanscape/frontend/src/styles/: GlobalStyle.tsx
beanscape/frontend/src/util/: PostMessage.tsx  useLocalStorage.tsx
markov/texts/: beanble.txt  beanble_only_beans.txt  bible.txt  biblelong.txt
src/: dispatcher.rs  main.rs  module.rs
src/backend/: currency.rs  markov.rs  mod.rs  specialbeans.rs  translation.rs
src/modules/: admin.rs  beanbird.rs  beanius.rs  beans.rs  beanverse.rs  currency.rs  magicbean.rs  markov.rs  mod.rs  saybeans.rs  showmebeans.rs  specialbeans.rs  spinthebean.rs  translation.rs
