[package]
name = "bean_bot"
version = "0.3.1"
authors = ["Rasmus Lyxell", "Filip Henningsson", "Mimmi Edholm"]
edition = "2018"

[dependencies]
serenity = "0.10.7"
markov = "1.1.0"
songbird = "0.2.0"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.25.3", features=["bundled", "chrono"] }
rand = "0.8"
chrono = "0.4"
glob = "0.3.0"
jsonwebtoken = "7.2.0"
serde = "1.0.125"
serde_json = "1.0.64"
reqwest = { version = "0.11.2", features= ["json"] }
rust-ini = "0.17.0"
regex = "1.4.5"
